[package]
name = "llm_enhancer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.87"
log = "0.4.22"
async-openai = "0.24.0"
dotenv = "0.15"
teloxide = { version = "0.13.0", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-attributes = "0.1.27"
tracing-appender = "0.2.3"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
reqwest = "0.11.27"
chrono = "0.4.38"